bk_ida/gccida/c2/copy_list
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/tree.c:992:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/tree.c:997:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/tree.c:1001:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/tree.c:1009:19: error: expected expression
v3 = ( tree_node *)ggc_alloc( v2); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/tree.c:1009:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)ggc_alloc( v2); 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/tree.c:1034:20: error: expected expression
v12 = ( tree_node *)ggc_alloc( v11); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/tree.c:1034:9: error: use of undeclared identifier 'tree_node'
v12 = ( tree_node *)ggc_alloc( v11); 
        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_list/src/obj/tree.o] Error 1
